[package]
name = "corpipe-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
candle-core = "0.11.0"
candle-nn = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
safetensors = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
udpipe-rs = "0.2.0"
