[package]
name = "corpipe-rs"
version = "0.1.0"
edition = "2024"
description = "CorPipe coreference analysis library and CLI"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/SergioArrighi/corpipe-rss"
homepage = "https://github.com/SergioArrighi/corpipe-rs"
keywords = ["nlp", "coreference", "conllu", "udpipe"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0.103"
candle-core = "0.11.0"
candle-nn = "0.11.0"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokenizers = "0.23.1"
udpipe-rs = "0.2.0"
